Fixes incoherences on small screens

--- a/less/import/components.less
+++ b/less/import/components.less
@@ -64,14 +64,6 @@ code {
                 color: @light;
             }
         }
-
-        @media (max-width: 767px) {
-            padding: 6px 10px; .navbar-text {
-                line-height: 16px;
-                margin: 12px 6px;
-                font-size: 12px;
-            }
-        }
     }
 
     @media (min-width: 768px) and (max-width: 979px) {
